...
    android:orientation="vertical"
    tools:context=".Fragments.SEARCH_FRAGMENT.searchfragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/text_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center_horizontal"
        android:paddingTop="100dp"
        android:text="Search"
...

    <ImageView
        android:layout_width="341dp"
        android:layout_height="44dp"
        android:layout_gravity="center|center_horizontal"
        android:src="@drawable/searchbar"
        android:id="@+id/searchImg"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Browse all"
        android:textColor="@color/TextColor"
        android:textSize="24dp"
        android:textStyle="bold"
        android:id="@+id/textcategor"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        tools:ignore="MissingConstraints">

    </androidx.recyclerview.widget.RecyclerView>
...
