...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/textcategorplaylist"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:padding="20dp"
            android:text="NAME"
...
                        android:layout_width="200dp"
                        android:layout_height="match_parent"
                        android:layout_toRightOf="@id/lcp1"
                        android:orientation="vertical">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recycleCategoryPlaylist1"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                        </androidx.recyclerview.widget.RecyclerView>

...
