...
                                android:scaleType="centerCrop"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="8dp"
                                android:src = "@drawable/default_image"
                                android:layout_marginBottom="20dp"/>
                            <TextView
                                android:id="@+id/playlist_name_middle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:textSize="32sp"
                                android:textStyle="bold"
                                android:textColor="@android:color/background_light"
...
